[FIX] Fixed jumbo spacing

--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ hr{
 .arrow-down{
     font-size: 50px;
     position: absolute;
-    bottom: -150px;
+    bottom: -120px;
 }
 
 .button{
@@ -256,4 +256,8 @@ hr{
 
 .position-relative{
     position: relative;
+}
+
+.jumbo-text-spacing{
+    padding-bottom: 30px;
 }
